RESOLVED FIXED204739
[GTK] Fix some warnings
https://bugs.webkit.org/show_bug.cgi?id=204739
Summary [GTK] Fix some warnings
Rob Buis
Reported 2019-12-02 01:59:19 PST
I see this in a recent build: In file included from DerivedSources/WebCore/unified-sources/UnifiedSource-4babe430-6.cpp:4: ../../Source/WebCore/Modules/indexeddb/IDBDatabase.cpp: In member function ‘void WebCore::IDBDatabase::connectionToServerLost(const WebCore::IDBError&)’: ../../Source/WebCore/Modules/indexeddb/IDBDatabase.cpp:281:15: warning: unused variable ‘context’ [-Wunused-variable] if (auto* context = scriptExecutionContext()) ^~~~~~~ ../../Source/WebCore/Modules/indexeddb/IDBDatabase.cpp:287:15: warning: unused variable ‘context’ [-Wunused-variable] if (auto* context = scriptExecutionContext()) ^~~~~~~ [2894/3859] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unified-sources/UnifiedSource-207b877e-4.cpp.o In file included from DerivedSources/WebCore/unified-sources/UnifiedSource-207b877e-4.cpp:4: ../../Source/WebCore/layout/inlineformatting/InlineLineBuilder.cpp:267:17: warning: multi-line comment [-Wcomment] // \
Attachments
Patch (4.29 KB, patch)
2019-12-02 02:01 PST, Rob Buis
no flags
Patch (2.86 KB, patch)
2019-12-02 04:40 PST, Rob Buis
no flags
Patch (2.76 KB, patch)
2019-12-02 06:44 PST, Rob Buis
no flags
Patch (2.77 KB, patch)
2019-12-02 07:37 PST, Rob Buis
no flags
Patch (2.77 KB, patch)
2019-12-02 07:40 PST, Rob Buis
no flags
Rob Buis
Comment 1 2019-12-02 02:01:42 PST
Frédéric Wang Nélar
Comment 2 2019-12-02 02:54:40 PST
Comment on attachment 384601 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=384601&action=review > Source/WebCore/layout/inlineformatting/InlineLineBuilder.cpp:-267 > - // \ I can't see anything on https://webkit.org/code-style-guidelines/ saying we shouldn't use "C style" but maybe an alternative is to change this '\'. For example use '/' instead and move inline-block to the right.
Rob Buis
Comment 3 2019-12-02 02:58:16 PST
(In reply to Frédéric Wang (:fredw) from comment #2) > Comment on attachment 384601 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=384601&action=review > > > Source/WebCore/layout/inlineformatting/InlineLineBuilder.cpp:-267 > > - // \ > > I can't see anything on https://webkit.org/code-style-guidelines/ saying we > shouldn't use "C style" but maybe an alternative is to change this '\'. For > example use '/' instead and move inline-block to the right. I have a hard time understanding that part of the ASCII art. I think I'll try your suggestion and CC zalan/antii whether they like it.
Rob Buis
Comment 4 2019-12-02 04:40:37 PST
Rob Buis
Comment 5 2019-12-02 06:36:03 PST
@zalan, antti, is the new ASCII art acceptable? :) It fixes the warning.
alan
Comment 6 2019-12-02 06:41:30 PST
(In reply to Rob Buis from comment #5) > @zalan, antti, is the new ASCII art acceptable? :) It fixes the warning. Let's just remove those 2 lines: +++ b/Source/WebCore/layout/inlineformatting/InlineLineBuilder.cpp @@ -264,8 +264,6 @@ void LineBuilder::alignContentVertically(RunList& runList) ASSERT(!formattingState.lineBoxes().isEmpty()); auto inlineBlockBaselineOffset = formattingState.lineBoxes().last().baselineOffset(); // The inline-block's baseline offset is relative to its content box. Let's convert it relative to the margin box. - // inline-block - // \ // _______________ <- margin box // | // | ____________ <- border box
Rob Buis
Comment 7 2019-12-02 06:44:05 PST
WebKit Commit Bot
Comment 8 2019-12-02 06:46:17 PST
Comment on attachment 384615 [details] Patch Rejecting attachment 384615 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 384615, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output: https://webkit-queues.webkit.org/results/13284915
WebKit Commit Bot
Comment 9 2019-12-02 07:36:16 PST
Comment on attachment 384615 [details] Patch Clearing flags on attachment: 384615 Committed r252982: <https://trac.webkit.org/changeset/252982>
WebKit Commit Bot
Comment 10 2019-12-02 07:36:17 PST
All reviewed patches have been landed. Closing bug.
Rob Buis
Comment 11 2019-12-02 07:37:42 PST
Reopening to attach new patch.
Rob Buis
Comment 12 2019-12-02 07:37:44 PST
Radar WebKit Bug Importer
Comment 13 2019-12-02 07:37:58 PST
Radar WebKit Bug Importer
Comment 14 2019-12-02 07:37:58 PST
WebKit Commit Bot
Comment 15 2019-12-02 07:39:47 PST
Comment on attachment 384617 [details] Patch Rejecting attachment 384617 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 384617, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=384617&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=204739&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Processing patch 384617 from bug 204739. Fetching: https://bugs.webkit.org/attachment.cgi?id=384617 Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 3 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/Modules/indexeddb/IDBDatabase.cpp Hunk #1 FAILED at 278. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/Modules/indexeddb/IDBDatabase.cpp.rej patching file Source/WebCore/layout/inlineformatting/InlineLineBuilder.cpp Hunk #1 FAILED at 263. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/layout/inlineformatting/InlineLineBuilder.cpp.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: https://webkit-queues.webkit.org/results/13284944
Rob Buis
Comment 16 2019-12-02 07:40:40 PST
Note You need to log in before you can comment on or make changes to this bug.