[GTK] Fix some warnings https://bugs.webkit.org/show_bug.cgi?id=204739

Patch by Rob Buis <rbuis@igalia.com> on 2019-12-02
Reviewed by Frédéric Wang.

* Modules/indexeddb/IDBDatabase.cpp:
(WebCore::IDBDatabase::connectionToServerLost):
* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::alignContentVertically):

Canonical link: https://commits.webkit.org/217955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252982 268f45cc-cd09-0410-ab3c-d52691b4dbfc